--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,18 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.3'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
 
 group = 'com.phoenix-gambling'
 version = '1.0.0'
-sourceCompatibility = '17'
+sourceCompatibility = '15'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.6.3'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.8'
 }
 
 tasks.named('test') {
